--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,7 @@ $close-color-hover: saturate ($close-color, 50%);
 $linkcolor: rgb(243, 241, 200);
 
 
-
+$break-large: 1800px;
 $break-small: 600px;
 
 body {
@@ -122,22 +122,16 @@ body {
 
 .hole {
   margin: 0;
-  overflow: hidden;
   display: block;
   width: 100%;
   position: relative;
+  height:3690px;
 
 
 /****************************************************************\
 *** Parallax ****************************************************
 \****************************************************************/
 
-
-
-.artifacts,.timeline
-{
-  position: absolute;
-}
 
   .parallax-bg3a,
   .parallax-bg3b,
@@ -153,28 +147,29 @@ body {
   }
   .parallax-bg1 {
     // hole
-    
     z-index: 1;
-    width: 50vw;
-    margin-left: 25vw;
+    width: 100vw;
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/scaled.jpg);
     background-repeat: no-repeat;
     background-position: top right;
+    background-color: #000;
   }
   
   .parallax-bg2b {
     //left back
     z-index: 4;
-    left: 0;
     width: 300px;
+    left: 50%;
+    margin:0 0 0 -730px;
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallleft.png?w456456);
   }
 
   .parallax-bg2a {
     //right back
     z-index: 2;
-    right: 0;
     width: 300px;
+    left: 50%;
+    margin:0 0 0 430px;
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallright.png?345345);
   }
 
@@ -182,16 +177,18 @@ body {
   .parallax-bg3a {
     //left fore
     z-index: 5;
-    left: 0;
     width: 200px;
+    left: 50%;
+    margin:0 0 0 -750px;
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/walllefttop.png?65745);
   }
 
   .parallax-bg3b {
     //right fore
     z-index: 3;
-    right: 0;
+    left: 50%;
     width: 200px;
+    margin:0 0 0 550px;
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallrighttop.png?4234134);
   }
 
@@ -312,19 +309,21 @@ body {
 /****************************************************************\
 *** Timeline  ****************************************************
 \****************************************************************/
+
 @media screen and (min-width: $break-small) {
   .timeline {
     z-index: 4;
     position: fixed;
     width: 100%;
     max-width: 1800px;
-    margin: 0 auto;
+    left: 50%;
+    margin: 0 0 0 -900px;
     color: #fff;
     pointer-events: none;
     li {
       margin: 0 0 150px 100%;
       float: right;
-      border-bottom: 1px dashed rgba(255, 255, 255, 0.6);
+      border-top: 1px dashed rgba(255, 255, 255, 0.6);
       height: 10px;
       background: -webkit-linear-gradient(
         bottom,
@@ -340,8 +339,8 @@ body {
       img {
         width: 100px;
         position: absolute;
-        right: 20px;
-        top: -100px;
+        right: -0;
+        top: 2em;
       }
     }
     li:last-of-type {
@@ -428,42 +427,42 @@ body {
 
   label.artifact1 {
     left: 50%;
-    top: 1010px;
+    top: 10px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact2 {
     left: 50%;
-    top: 1310px;
+    top: 310px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact3 {
     left: 50%;
-    top: 1600px;
+    top: 600px;
     width: 350px;
     transform: translate(-50%, 0);
   }
 
   label.artifact4 {
     left: 50%;
-    top: 2000px;
+    top: 1000px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact5 {
     left: 50%;
-    top: 2500px;
+    top: 1500px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact6 {
     left: 50%;
-    top: 3000px;
+    top: 2000px;
     width: 350px;
     transform: translate(-50%, 0);
   }
