--- a/src/style.scss
+++ b/src/style.scss
@@ -10,8 +10,6 @@ $headlineshadow: rgba(243, 241, 237, 0.5);
 $close-color: adjust-hue($bubble-background, 170%);
 $close-color-hover: saturate ($close-color, 50%);
 $linkcolor: rgb(243, 241, 200);
-
-
 $break-large: 1800px;
 $break-small: 600px;
 
@@ -27,7 +25,11 @@ body {
   vertical-align: baseline;
   line-height: 1.5em;
 }
-
+.content {
+  position: relative; 
+  overflow: hidden;
+  z-index: 2;
+}
 .intro {
   position: relative;
   overflow: hidden;
@@ -39,7 +41,6 @@ body {
   box-sizing: content-box;
   font-size: 1.2em;
   margin: 0 auto;
-  z-index: 1000;
   @media screen and (min-width: $break-small) {
     h1 {
       max-width: 600px;
@@ -198,14 +199,29 @@ body {
 /****************************************************************\
 *** Chapters ****************************************************
 \****************************************************************/
-.articles{
+#layer1,
+#layer2,
+#layer3,
+#layer4,
+#layer5,
+#layer6 {
+  // padding-top: 70px;
+  // margin-top:100vh;
+  // top: 100vh;
+  width: 350px;
+  display: block;
   position: relative;
+}
+
+.articles{
+  position: fixed;
   margin: 0;
   overflow: hidden;
   display: block;
   width: 100%;
   article {
     position: relative;
+    margin: 60px 0;
     width: 300px;
     color: #fff;
     padding: 20px 20px 100px 20px;
@@ -255,19 +271,7 @@ body {
   }
 }
 
-#layer1,
-#layer2,
-#layer3,
-#layer4,
-#layer5,
-#layer6 {
-  padding-top: 70px;
-  margin-top:100vh;
-  top: 2600px;
-  width: 350px;
-  display: block;
-  position: relative;
-}
+
 
 /****************************************************************\
 *** Diagram numbers  *********************************************
@@ -315,9 +319,9 @@ body {
     z-index: 4;
     position: fixed;
     width: 100%;
-    max-width: 1800px;
+    max-width: 1400px;
     left: 50%;
-    margin: 0 0 0 -900px;
+    margin: 0 0 0 -550px;
     color: #fff;
     pointer-events: none;
     li {
@@ -362,16 +366,15 @@ body {
   margin: 0 auto;
   display: block;
   box-sizing: content-box;
-  z-index: 100;
+  z-index: 10;
   position: fixed;
   left: 50%;
   // width: 1200px;
   // height: 3690px;
   margin: 0;
-  margin-left: -600px;
   pointer-events: none;
   .artifact {
-    z-index: 1000;
+    z-index: 10;
   }
   input {
     display: none;
@@ -684,7 +687,7 @@ body {
 
 .footer {
   position: relative;
-  overflow: hidden;
+  height:100vh;
   background: #000;
   text-align: center;
   color: #fff;
@@ -749,7 +752,7 @@ body {
   }
 }
 
-.scrollholder {  //wherer the video is displayed
+.scrollholder {  //where the video is displayed
   min-width: 100vw;
   height: 120vh;
   position: fixed;
