--- a/src/style.scss
+++ b/src/style.scss
@@ -24,15 +24,16 @@ body {
   font-size: 100%;
   vertical-align: baseline;
   line-height: 1.5em;
+  height: 1000vh;     
+  // set the height of your document here - I sort of guess, based on how hard it is to scroll - 
+  // This unit VH is the user's monitor, cut into 100 vertical units. 1000 is 10 screens worth - this makes other calculations easier.
+  // big numbers here are huge scrolls. Small numbers are tiny scrolls, the CSS recalculates everything based on this scroll comfort
 }
-.content {
-  position: relative; 
-  overflow: hidden;
-  z-index: 2;
-}
+
 .intro {
   position: relative;
   overflow: hidden;
+  height:300vh;
   text-align: center;
   color: #fff;
   font-weight: 300;
@@ -121,19 +122,31 @@ body {
   }
 }
 
-.hole {
-  margin: 0;
-  display: block;
-  width: 100%;
-  position: relative;
-  height:3690px;
 
+.content {
+  pointer-events: none;
+  display:block;
+  position: relative;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: 11;
+}
+.hole {
+  display:block;
+  position: relative;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: 10;
+  top:100vh; //always below the fold
+}
 
 /****************************************************************\
 *** Parallax ****************************************************
 \****************************************************************/
 
-
+.hole {
   .parallax-bg3a,
   .parallax-bg3b,
   .parallax-bg2b,
@@ -144,15 +157,23 @@ body {
     top: 0px;
     background-repeat: repeat-y;
     pointer-events: none;
-    height:3690px;
+    height:3690px;                   
+    // This is an image that moves with scroll, so it's set as a background on a fixed element that 
+    // uses background-position to 'scroll' up and down. It needs a PX vale to containthe image. Note that you
+    //can use the div, bigger or smaller to 'zoom' into am image, if background-sizing is contrained.
+    
+    
   }
+
   .parallax-bg1 {
     // hole
+    position: fixed;
+    // float: left;
     z-index: 1;
     width: 100vw;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/scaled.jpg);
+    background-image: url(scaled.jpg);
     background-repeat: no-repeat;
-    background-position: top right;
+    background-position: 50% 0;
     background-color: #000;
   }
   
@@ -162,7 +183,7 @@ body {
     width: 300px;
     left: 50%;
     margin:0 0 0 -730px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallleft.png?w456456);
+    background-image: url(wallleft.png?w456456);
   }
 
   .parallax-bg2a {
@@ -171,7 +192,7 @@ body {
     width: 300px;
     left: 50%;
     margin:0 0 0 430px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallright.png?345345);
+    background-image: url(wallright.png?345345);
   }
 
 
@@ -181,7 +202,7 @@ body {
     width: 200px;
     left: 50%;
     margin:0 0 0 -750px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/walllefttop.png?65745);
+    background-image: url(walllefttop.png?65745);
   }
 
   .parallax-bg3b {
@@ -190,38 +211,29 @@ body {
     left: 50%;
     width: 200px;
     margin:0 0 0 550px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/wallrighttop.png?4234134);
+    background-image: url(wallrighttop.png?4234134);
   }
 
 
 }
 
 /****************************************************************\
-*** Chapters ****************************************************
+*** Articles ****************************************************
 \****************************************************************/
-#layer1,
-#layer2,
-#layer3,
-#layer4,
-#layer5,
-#layer6 {
-  // padding-top: 70px;
-  // margin-top:100vh;
-  // top: 100vh;
-  width: 350px;
-  display: block;
-  position: relative;
-}
+
 
 .articles{
-  position: fixed;
+  height: 700vh;
+  position: relative;
   margin: 0;
   overflow: hidden;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
   width: 100%;
   article {
     position: relative;
-    margin: 60px 0;
+    margin:0 10vh 1vh ;
     width: 300px;
     color: #fff;
     padding: 20px 20px 100px 20px;
@@ -317,11 +329,10 @@ body {
 @media screen and (min-width: $break-small) {
   .timeline {
     z-index: 4;
+    right: 0;
     position: fixed;
-    width: 100%;
-    max-width: 1400px;
-    left: 50%;
-    margin: 0 0 0 -550px;
+    width: 60vw;
+    margin: 0 10vh 0 0;
     color: #fff;
     pointer-events: none;
     li {
@@ -331,8 +342,8 @@ body {
       height: 10px;
       background: -webkit-linear-gradient(
         bottom,
-        rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0)
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.3)
       );
       color: #fff;
       position: relative;
@@ -386,7 +397,7 @@ body {
     background-repeat: no-repeat;
     font-weight: 100;
     letter-spacing: 0.03em;
-    line-height: 1.5;
+    line-height: 1.5em;
     display: inline-block;
     position: absolute;
     margin: 0;
@@ -430,42 +441,42 @@ body {
 
   label.artifact1 {
     left: 50%;
-    top: 10px;
+    top: 1000px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact2 {
     left: 50%;
-    top: 310px;
+    top: 1310px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact3 {
     left: 50%;
-    top: 600px;
+    top: 1500px;
     width: 350px;
     transform: translate(-50%, 0);
   }
 
   label.artifact4 {
     left: 50%;
-    top: 1000px;
+    top: 1900px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact5 {
     left: 50%;
-    top: 1500px;
+    top: 2300px;
     width: 400px;
     transform: translate(-50%, 0);
   }
 
   label.artifact6 {
     left: 50%;
-    top: 2000px;
+    top: 2850px;
     width: 350px;
     transform: translate(-50%, 0);
   }
@@ -553,7 +564,7 @@ body {
     top: 25px;
     right: 25px;
     display: block;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/44969/Close-X-gy.png);
+    background-image: url(Close-X-gy.png);
     background-color: $bubble-background;
     background-size: 60%;
     background-position: center;
@@ -688,6 +699,7 @@ body {
 .footer {
   position: relative;
   height:100vh;
+  bottom:100vh;
   background: #000;
   text-align: center;
   color: #fff;
